updated all the files

--- a/index.html
+++ b/index.html
@@ -1,27 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-  	<title>Welcome to Sheng Yang: Full-Stack Software Engineer</title>
+  	<title>Sheng (Bruce) Yang: Full-Stack Software Engineer</title>
   </head>
  
 	<body>
-		<div>
-			<div id="header">
-				<div><p>Sheng Yang</p></div>
-				<div id="nav">
-		     	<ul>
-			     	<li><a href="#home">Home</a></li>>
-		        <li><a href="#about">About</a></li>
-		        <li><a href="#projects">Projects</a></li>
-		        <li><a href="#portfolio">Portfolio</a></li>
-		        <li><a href="#travel&food">Travel&Food</a></li>
-		        <li><a href="#contact">Contact</a></li>
-		        <li><a href="#blog">Blog</a></li>
-		     	</ul>
-				</div>
-			</div>
-	  	<div id="app"></div>
-	  </div>
-	  	<script src="bundle.js"></script>
+	  <div id="app"></div>
+	  <script src="bundle.js"></script>
 	</body>
 </html>
