basic css setting

--- a/index.html
+++ b/index.html
@@ -2,6 +2,12 @@
 <html>
   <head>
   	<title>Sheng (Bruce) Yang: Full-Stack Software Engineer</title>
+  	<link rel="stylesheet" href="./src/styles/scroll.css">
+  	<link rel="stylesheet" href="./src/styles/style.css">
+  	<link rel="stylesheet" href="./src/styles/font-awesome.css">
+  	<link rel="stylesheet" href="./src/styles/portfolio.css">
+  	<link rel="stylesheet" href="./src/styles/carousel.css">
+<!--   	<link rel="stylesheet" href="./src/styles/responsive.css"> -->
   </head>
  
 	<body>
