--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
  
 	<body>
 	  <div id="app"></div>
+    <script src='./src/lib/jquery-3.1.1.min.js'></script>
 	  <script src="bundle.js"></script>
 	</body>
 </html>
