add the js dependencies needed for scroll

--- a/index.html
+++ b/index.html
@@ -13,6 +13,34 @@
 	<body>
 	  <div id="app"></div>
     <script src='./src/lib/jquery-3.1.1.min.js'></script>
-	  <script src="bundle.js"></script>
+    <script src='./src/lib/head.min.js'></script>
+
+
+    <!-- Page Scrolling -->
+    <script src='./src/head.js'></script>
+    <script type='text/javascript' src='./src/lib/jquery.mousewheel.js'></script>
+    <script type='text/javascript' src='./src/lib/mwheelIntent.js'></script>
+    <script type='text/javascript' src='./src/lib.jquery.jscrollpane.min.js'></script>
+    <script type='text/javascript' src='./src/lib/jquery.history.js'></script>
+    <script type='text/javascript' src='./src/lib/core.string.js'></script>
+    <script type='text/javascript' src='./src/lib/jquery.easing.1.3.js'></script>
+    <script type='text/javascript' src='./src/lib/jquery.smartresize.js'></script>
+    <script type='text/javascript' src='./src/lib/jquery.page.js'></script>
+    <!-- Fit Video -->
+    <script type='text/javascript' src='./src/lib/jquery.fitvids.js'></script>
+    <!-- All Javascript Component -->
+    <script type='text/javascript' src='./src/lib/setting.js'></script>
+	  <script type='text/javascript' src="bundle.js"></script>
 	</body>
 </html>
+
+head.js(
+  { mousewheel:  },
+  { mwheelIntent:  },
+  { jScrollPane:  },
+  { history:  },
+  { stringLib:  },
+  { easing:  },
+  { smartresize:  },
+  { page:  }
+);
