--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <script src='./src/head.js'></script>
     <script type='text/javascript' src='./src/lib/jquery.mousewheel.js'></script>
     <script type='text/javascript' src='./src/lib/mwheelIntent.js'></script>
-    <script type='text/javascript' src='./src/lib.jquery.jscrollpane.min.js'></script>
+    <script type='text/javascript' src='./src/lib/jquery.jscrollpane.min.js'></script>
     <script type='text/javascript' src='./src/lib/jquery.history.js'></script>
     <script type='text/javascript' src='./src/lib/core.string.js'></script>
     <script type='text/javascript' src='./src/lib/jquery.easing.1.3.js'></script>
