disable 'progressBar' to fix some problems

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <!-- Fit Video -->
     <script type='text/javascript' src='./src/lib/jquery.fitvids.js'></script>
     <!-- All Javascript Component -->
-    <script type='text/javascript' src='./src/lib/setting.js'></script>
+    <script type='text/javascript' src='./src/lib/settings.js'></script>
 	  <script type='text/javascript' src="bundle.js"></script>
 	</body>
 </html>
