change the version of jquery for better controlling

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
  
 	<body>
 	  <div id="app"></div>
-    <script src='./src/lib/jquery-3.1.1.min.js'></script>
+    <script src='./src/lib/jquery.min.js'></script>
     <script src='./src/lib/head.min.js'></script>
 
 
