add comments for index.html

--- a/index.html
+++ b/index.html
@@ -6,11 +6,15 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1">
     <meta name="ROBOTS" content="INDEX, FOLLOW">
   	<title>Sheng (Bruce) Yang: Full-Stack Software Engineer</title>
+    <!-- Design Style -->
   	<link rel="stylesheet" href="./src/styles/scroll.css">
   	<link rel="stylesheet" href="./src/styles/style.css">
+    <!-- Icon -->
   	<link rel="stylesheet" href="./src/styles/font-awesome.css">
+    <!-- Portfolio Thumbnail / Slider -->
   	<link rel="stylesheet" href="./src/styles/portfolio.css">
   	<link rel="stylesheet" href="./src/styles/carousel.css">
+    <!-- Responsive -->
   	<link rel="stylesheet" href="./src/styles/responsive.css">
   </head>
  
