add helper libraries

--- a/index.html
+++ b/index.html
@@ -16,13 +16,16 @@
   	<link rel="stylesheet" href="./src/styles/carousel.css">
     <!-- Responsive -->
   	<link rel="stylesheet" href="./src/styles/responsive.css">
+    <script type="text/javascript" src="./src/lib/jquery-2.0.3.min.js"></script>
+    <script type="text/javascript" src="./src/lib/sendemail.js"></script>
+    <script type="text/javascript" src="./src/lib/progressbar.js"></script>
+    <script type="text/javascript" src="./src/lib/modernizr.custom.js"></script>
   </head>
  
 	<body>
 	  <div id="app"></div>
     <script src='./src/lib/jquery.min.js'></script>
     <script src='./src/lib/head.min.js'></script>
-
 
     <!-- Page Scrolling -->
     <script src='./src/head.js'></script>
