fix the bugs that the content page can't scroll

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
  
 	<body>
 	  <div id="app"></div>
-    <script src='./src/lib/jquery.min.js'></script>
+    <script type="text/javascript" src="./src/lib/jquery.min.js"></script>
     <script src='./src/lib/head.min.js'></script>
 
     <!-- Portfolio Thumbnail -->
@@ -43,7 +43,7 @@
       head.js(
         { mousewheel : "./src/lib/jquery.mousewheel.js" },
         { mwheelIntent : "./src/lib/mwheelIntent.js" },
-        { jScrollPane : "./src/lib/jquery.jscrollpane.min.js" },
+        { jScrollPane : "./src/lib/jquery.jscrollpane.js" },
         { history : "./src/lib/jquery.history.js" },
         { stringLib : "./src/lib/core.string.js" },
         { easing : "./src/lib/jquery.easing.1.3.js" },
