add skills pages into website

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       head.js(
         { mousewheel : "./src/lib/jquery.mousewheel.js" },
         { mwheelIntent : "./src/lib/mwheelIntent.js" },
-        { jScrollPane : "./src/lib/jquery.jscrollpane.js" },
+        { jScrollPane : "./src/lib/jquery.jscrollpane.min.js" },
         { history : "./src/lib/jquery.history.js" },
         { stringLib : "./src/lib/core.string.js" },
         { easing : "./src/lib/jquery.easing.1.3.js" },
