--- a/index.html
+++ b/index.html
@@ -6,16 +6,19 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1">
     <meta name="ROBOTS" content="INDEX, FOLLOW">
   	<title>Sheng (Bruce) Yang: Full-Stack Software Engineer</title>
+    <!-- Google Font -->
+    <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <!-- Design Style -->
-  	<link rel="stylesheet" href="./src/styles/scroll.css">
-  	<link rel="stylesheet" href="./src/styles/style.css">
+  	<link rel="stylesheet" href="./src/assets/styles/scroll.css">
+  	<link rel="stylesheet" href="./src/assets/styles/style.css">
     <!-- Icon -->
-  	<link rel="stylesheet" href="./src/styles/font-awesome.css">
+  	<link rel="stylesheet" href="./src/assets/styles/font-awesome.css">
     <!-- Portfolio Thumbnail / Slider -->
-  	<link rel="stylesheet" href="./src/styles/portfolio.css">
-  	<link rel="stylesheet" href="./src/styles/carousel.css">
+  	<link rel="stylesheet" href="./src/assets/styles/portfolio.css">
+  	<link rel="stylesheet" href="./src/assets/styles/carousel.css">
     <!-- Responsive -->
-  	<link rel="stylesheet" href="./src/styles/responsive.css">
+  	<link rel="stylesheet" href="./src/assets/styles/responsive.css">
     <script type="text/javascript" src="./src/lib/jquery-2.0.3.min.js"></script>
     <script type="text/javascript" src="./src/lib/sendemail.js"></script>
     <script type="text/javascript" src="./src/lib/progressbar.js"></script>
