make the popped out grid_gallery work, by using $(window).on('load')

--- a/index.html
+++ b/index.html
@@ -36,6 +36,14 @@
     <script type="text/javascript" src="./src/lib/class_helper.js"></script>
     <script type="text/javascript" src="./src/lib/grid_gallery.js"></script>
 
+    <!-- Portfolio Grid -->
+    <script>
+      $(window).on('load', function() {
+        new CBPGridGallery( document.getElementById( 'grid-gallery' ) );
+      });
+    </script>>
+
+
     <!-- Portfolio Slider -->
     <script type="text/javascript" src="./src/lib/carousel.js"></script>
     <script type="text/javascript" src="./src/lib/jquery.easypiechart.js"></script>
