--- a/index.html
+++ b/index.html
@@ -1,3 +1,24 @@
+<!--
+
+  _    _      _ _                           _
+ | |  | |    | | |                         | |
+ | |__| | ___| | | ___    _   _  ___  _   _| |
+ |  __  |/ _ \ | |/ _ \  | | | |/ _ \| | | | |
+ | |  | |  __/ | | (_) | | |_| | (_) | |_| |_|
+ |_|  |_|\___|_|_|\___/   \__, |\___/ \__,_(_)
+                           __/ |
+                          |___/
+
+
+Welcome to my responsive homepage, which is built with React rendering front-end
+and Node.js rendering static pages. Deploy on AWS through docker.
+
+If you want to checkout code base of this website, please go to
+https://github.com/bruceisyoung/personalWebsite
+
+XOXO,
+Sheng
+-->
 <!DOCTYPE html>
 <html>
   <head>
