revise introduction wording on index.html

--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
 
 
 Welcome to my responsive homepage, which is built with React rendering front-end
-and Node.js rendering static pages. Deploy on AWS through docker.
+and Node.js rendering static pages. This small app is deployed on heroku.
+
+(ps: I totally want to deploy it on AWS thourgh docker and uing loadbalancer. But
+it's not an economic choice for a small project like this, LOL)
 
 If you want to checkout code base of this website, please go to
 https://github.com/bruceisyoung/personalWebsite
