--- a/index.html
+++ b/index.html
@@ -74,18 +74,7 @@ Sheng
     <script type="text/javascript" src="./src/lib/text.rotator.js"></script>
 
     <!-- Page Scrolling -->
-    <script>
-      head.js(
-        { mousewheel : "./src/lib/jquery.mousewheel.js" },
-        { mwheelIntent : "./src/lib/mwheelIntent.js" },
-        { jScrollPane : "./src/lib/jquery.jscrollpane.min.js" },
-        { history : "./src/lib/jquery.history.js" },
-        { stringLib : "./src/lib/core.string.js" },
-        { easing : "./src/lib/jquery.easing.1.3.js" },
-        { smartresize : "./src/lib/jquery.smartresize.js" },
-        { page : "./src/lib/jquery.page.js" }
-      );
-    </script>
+    <script type="text/javascript" src="./src/head.js"></script>
     <!-- Fit Video -->
     <script type='text/javascript' src='./src/lib/jquery.fitvids.js'></script>
     <!-- All Javascript Component -->
